Nav and text contrast fixes

--- a/css/style.scss
+++ b/css/style.scss
@@ -8,7 +8,7 @@ body {
   background: -moz-linear-gradient(-45deg, $serenity 0%, $rosequartz 100%);
   background: -webkit-linear-gradient(-45deg, $serenity 0%, $rosequartz 100%);
   background: linear-gradient(135deg, $serenity 0%, $rosequartz 100%);
-  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='$serenity', endColorstr='$rosequartz',GradientType=1 );
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr=$serenity, endColorstr=$rosequartz,GradientType=1 );
 }
 
 h1 {
@@ -156,7 +156,7 @@ img.header_image {
   background: -moz-linear-gradient(-45deg, $serenity 0%, $rosequartz 100%);
   background: -webkit-linear-gradient(-45deg, $serenity 0%, $rosequartz 100%);
   background: linear-gradient(135deg, $serenity 0%, $rosequartz 100%);
-  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='$serenity', endColorstr='$rosequartz',GradientType=1 );
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr=$serenity, endColorstr=$rosequartz, GradientType=1 );
   padding: 50px;
 }
 
